# drift_ml

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: bosch_cnc_dataset_raw_augment.ipynb  bosch_cnc_dataset_tsfresh.ipynb  drift_detection.ipynb
src/drift_ml/datasets/bosch_cnc_machining/extracted_features/: metadata_ws4096.pkl
src/drift_ml/datasets/bosch_cnc_machining/models/: lenet.py  nnclassifier.py
src/drift_ml/datasets/bosch_cnc_machining/notebooks/: augmentation_animation.ipynb  augmentation_figure_paper.ipynb  bosch_cnc_dataset_augment.ipynb  bosch_cnc_dataset_stft.ipynb  bosch_cnc_dataset_test_augmentation.ipynb  experiment.ipynb  stft_augment_cnn.ipynb  stft_augment_cnn_ensemble.ipynb  stft_cnn.ipynb  stft_cnn_from_raw.ipynb  stft_drift_dataloader.ipynb  tsfresh_augment_random_forest.ipynb  tsfresh_random_forest.ipynb
src/drift_ml/datasets/bosch_cnc_machining/scripts/: extract_tsfresh_features_augmented.py
src/drift_ml/datasets/bosch_cnc_machining/utils/: dataloader copy.py  dataloader.py  evaluation.py  experiment.py  utils.py
src/drift_ml/drift_detection/: __init__.py  common.py  multivariate.py  univariate.py
src/drift_ml/utils/: utils.py
