[build-system]
requires = ["setuptools>=61.0", "river"]
build-backend = "setuptools.build_meta"

[project]
name = "drift_ml"
version = "0.0.1"
authors = [
  { name="Nicolas Jourdan", email="nicolas.jourdan@tu-darmstadt.de" },
]
description = "Package containing tools for the WIP paper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
